--- a/l19stopwatch/style.css
+++ b/l19stopwatch/style.css
@@ -13,6 +13,8 @@ body{
 	padding: 30px;
 	box-shadow: 0 5px 10px 10px rgba(0,0,0,0.3);
 	text-align: center;
+
+	position: relative;
 }
 
 h2{
@@ -26,6 +28,8 @@ h2{
 	font-size: 35px;
 	padding: 10px;
 	margin: 10px 0;
+
+	display: none;
 }
 
 .control{
@@ -48,4 +52,10 @@ h2{
 }
 .btn:active{
 	transform: scale(.97);
+}
+
+.mode-btn{
+	position:  absolute;
+	right: 10px;
+	top: 10px;
 }
