--- a/l22sidebar/style.css
+++ b/l22sidebar/style.css
@@ -14,6 +14,115 @@ body{
 	margin: 0;
 }
 
+/*Start Navigaiton*/
+
+.navbar{
+	width: 100%;
+	background-color: #333;
+
+	position: fixed;
+	left: 0;
+	top: 0;
+
+	display: flex;
+	justify-content: end;
+
+	padding: 0 30px;
+}
+
+.navbar a{
+	text-decoration: none;
+	color: #fff;
+
+	padding: 15px 20px;
+}
+
+.dropdown .dropdown-toggle{
+	background-color: inherit;
+	color: #fff;
+	border: none;
+	outline: none;
+	font-size: 16px;
+
+	padding: 15px 20px;
+}
+
+.navbar a:hover,.dropdown:hover .dropdown-toggle{
+	background-color: steelblue;
+}
+
+.dropdown-menu,.dropdown-menu-mega{
+	min-width:130px;
+    background:#f4f4f4;
+    box-shadow:0 10px 15px rgba(0,0,0,0.2);
+    position:absolute;
+    z-index:1;
+
+    display:none;
+}
+
+.dropdown-menu a{
+    color:#000;
+    text-decoration:none;
+
+    display:block;
+    text-align:left;
+}
+
+.dropdown-menu a:hover{
+    background:#ddd;
+}
+
+.dropdown:hover .dropdown-menu,.dropdown:hover .dropdown-menu-mega{
+    display:block;
+}
+
+
+.dropdown-menu-mega{
+	width: 100%;
+
+	left: 0;
+}
+
+.dropdown-menu-mega .header{
+	background: linear-gradient(75deg,gray,black);
+	color: #fff;
+	padding: 10px;
+}
+
+.row{
+	display: flex;
+	background-color: #f4f4f4;
+	padding: 30px;
+}
+
+.col-4{
+	width: 33.33%;
+}
+
+.col-4 h4{
+	text-align: center;
+	text-decoration: underline;
+}
+
+.col-4 a{
+	color: #000;
+	text-decoration: none;
+	text-align: center;
+
+	padding: 20px;
+
+	display: block;
+}
+
+.col-4 a:hover{
+    color: #fff;
+}
+
+/*End Navigaiton*/
+
+/*Start SideBar*/
+
 .logo{
 	width: 75px;
 	border-radius: 50%;
@@ -30,6 +139,12 @@ body{
 	position: fixed;
 	left: 10px;
 	top: 10px;
+
+	z-index: 2;
+}
+
+.fa-bars{
+	color: #fff;
 }
 
 .close-btn{
@@ -57,6 +172,10 @@ body{
 	top: 0;
 
 	transform: translateX(-100%);
+
+	transition: transform .5s ease-in-out;
+
+	z-index: 3;
 }
 
 .nav.nav-bg{
@@ -79,12 +198,34 @@ body{
 }
 
 .list-group .list-group-item{
+	background-color: steelblue;
 	color: #fff;
 	font-size: 15px;
 	text-decoration: none;
 	text-transform: uppercase;
+
+	padding: 10px;
+	display: block;
+	transition: all .3s;
 }
 
 .list-group ul{
 	list-style: none;
 }
+
+.list-group ul .list-group-item{
+    background-color: slateblue;
+}
+
+.list-group .list-group-item:hover{
+    opacity: .8;
+    transform: translate(10px);
+}
+.list-group .list-group-item:active{
+    background-color: darkblue;
+    opacity: 1;
+    transform: translate(0);
+}
+
+/*End SideBar*/
+
